<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_image_dialog"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ancho_imagen"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ancho_dialog"
                android:inputType="number"
                android:text="400"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ALTO DE LA IMAGEN: "
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alto_dialog"
                android:inputType="number"
                android:text="400"
                />
        </LinearLayout>


        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/select_calidad"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calidad_de_imagen"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/calidad_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="calidad"
                android:layout_margin="5dp"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancelar_dialog"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CANCELAR"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btn_confirmar_dialog"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmar"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_acent"
                />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>