<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="#1E1D1D"
    android:keepScreenOn="true"
    tools:context=".activitys.CompressVideoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_margin="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey"
        >

        <FrameLayout
            android:layout_width="@dimen/dp_150"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_150"
                android:id="@+id/imagen_video"/>

            <ImageView
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:src="@drawable/ic_play"
                android:layout_gravity="center"/>


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:src="@color/black"/>

            <LinearLayout
                android:layout_margin="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/grey"
                android:layout_gravity="center"
                android:layout_weight="2"
                >
                <TextView
                    android:id="@+id/tvx_before"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/txv_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:text=""/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/grey"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp_5"
            android:layout_weight="1"
            >
            <TextView android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/ruta_original" />
            <TextView android:id="@+id/tv_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="No Archivo"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/ruta_destino" />
            <TextView android:id="@+id/tv_output"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="No Archivo"
                android:layout_marginLeft="10dp" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <Spinner
            android:layout_margin="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spinner"/>
    </LinearLayout>


    <TextView android:id="@+id/tv_indicator"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="center_horizontal" />

    <TextView android:id="@+id/tv_progress"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="center_horizontal" />

    <ProgressBar android:id="@+id/pb_compress"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_10"
            android:background="@color/grey"
            >
            <LinearLayout android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:id="@+id/btn_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search_white"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/buscar_otro_video"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/btn_compress"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_compress"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/comprimir_video"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/btn_extract_audio"
                    >
                    <ImageView
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/player_header_icon"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extraer_audio"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/cortar_video"
                    >

                    <ImageView
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cut_white"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cortar_video"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"
                        />
                </LinearLayout>



            </LinearLayout>


        </LinearLayout>


    <ImageButton
        android:visibility="gone"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_shared"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:id="@+id/shared_video"/>

<!--        <com.google.android.gms.ads.AdView-->
<!--            android:layout_gravity="center"-->
<!--            xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--            android:id="@+id/adView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            ads:adSize="BANNER"-->
<!--            ads:adUnitId="@string/banner">-->
<!--        </com.google.android.gms.ads.AdView>-->

    </LinearLayout>
</ScrollView>